tests/testcases/invalid/06_unterminated_comment_eof.ciel
fn main() -> int {
    int x = 1; /* comment never closes...
}
